# ppplugin

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: build-and-test.yml  cmake-format.yml  cmake-lint.yml  cpp-build.yml  cpp-format.yml  cpp-lint.yml  cpp-unittest.yml  format.yml
cmake/: ppplugin-config.cmake.in
examples/: .clang-tidy  CMakeLists.txt
examples/configurable_plugin/: CMakeLists.txt  configurable_plugin.cpp  configurable_plugin.h  configurable_plugin_manager.cpp
examples/cpp_plugin/: CMakeLists.txt  cpp_plugin.cpp  cpp_plugin.h  example_1.cpp  example_2.cpp  example_3.cpp
examples/lua_plugin/: CMakeLists.txt  lua_plugin.h  lua_plugin_manager.cpp  plugin.lua
examples/multi_language_plugin/: CMakeLists.txt  multi_language_plugin_manager.cpp
examples/multi_language_plugin/plugins/: c_plugin.c  cpp_plugin.cpp  lua_plugin.lua  python_plugin.py
examples/multi_return_lua_plugin/: CMakeLists.txt  multi_return_lua_plugin_manager.cpp  plugin.lua
examples/python_plugin/: CMakeLists.txt  plugin.py  python_plugin_manager.cpp
examples/segfault_plugin/: CMakeLists.txt  segfault_plugin_manager.cpp
examples/segfault_plugin/plugins/: segfault_plugin.cpp  valid_plugin.cpp
examples/simple_plugin/: CMakeLists.txt  simple_plugin.cpp  simple_plugin.h  simple_plugin_manager.cpp
examples/testing/: CMakeLists.txt  plugin.py  testing.cpp
include/: errors.h  expected.h  lua_plugin.h  lua_script.h  noop_plugin.h  plugin.h  plugin_manager.h  ppplugin.cpp  python_plugin.h
include/c/: plugin.h
include/cpp/: object_plugin.h  plugin.h
include/detail/: boost_dll_loader.h  function_details.h  segfault_handling.h  template_helpers.h
include/lua/: lua_helpers.h  lua_script.h  lua_state.h  plugin.h
include/ppplugin/: errors.h  expected.h  noop_plugin.h  plugin.h  plugin_manager.h
include/ppplugin/c/: plugin.h
include/ppplugin/cpp/: plugin.h
include/ppplugin/detail/: boost_dll_loader.h  compatibility_utils.h  compiler_info.h  function_details.h  scope_guard.h  string_utils.h  template_helpers.h
include/ppplugin/lua/: lua_helpers.h  lua_script.h  lua_state.h  plugin.h
include/ppplugin/python/: plugin.h  python_exception.h  python_forward_defs.h  python_guard.h  python_interpreter.h  python_object.h  python_tuple.h
include/ppplugin/shell/: plugin.h  shell_session.h  shell_type_conversion.h
include/python/: plugin.h  python_exception.h  python_guard.h  python_interpreter.h  python_object.h  python_tuple.h
src/: CMakeLists.txt  boost_dll_loader.cpp  lua_script.cpp  lua_state.cpp  plugin_manager.cpp  ppplugin.cpp  python_exception.cpp  python_guard.cpp  python_interpreter.cpp  python_object.cpp  python_plugin.cpp  python_tuple.cpp  shell_plugin.cpp
src/c/: plugin.cpp
src/cpp/: plugin.cpp
src/lua/: lua_script.cpp  plugin.cpp
src/python/: plugin.cpp  python_exception.cpp  python_interpreter.cpp  python_list.cpp  python_object.cpp
src/shell/: plugin.cpp  shell_session.cpp
test/: .clang-tidy  CMakeLists.txt  detail_templates_tests.cpp  expected_tests.cpp  scope_guard_tests.cpp  test_helper.h  test_types.h
test/cmake_tests/: build_and_install_ppplugin.sh
test/cmake_tests/find_package_test/: CMakeLists.txt  a.cpp  a.lua  test.sh
test/conan_tests/: CMakeUserPresets.json  a.cpp  conanfile.py  test.sh
test/generic_plugin_tests/: CMakeLists.txt  generic_plugin_tests.cpp  test.lua  test.py  test.sh
test/lua_tests/: CMakeLists.txt  lua_tests.cpp  test.lua
test/python_tests/: CMakeLists.txt  python_tests.cpp  test.py
test/shell_tests/: CMakeLists.txt  shell_tests.cpp  test.sh
